feat: allow fetching from multiple subreddit (#92)

--- a/config.ini
+++ b/config.ini
@@ -22,7 +22,7 @@ password = password
 client_id = client_id
 client_secret = client_secret
 ; Reddit subreddit and flairs
-subreddit = unixporn
+subreddit_list = unixporn
 flair_list = screenshot, material
 
 [twitter]
