--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,13 @@ http_port = 8000
 host = localhost
 port = 6379
 
+[ollama]
+enabled = true
+; Ollama server host
+host = http://localhost:11434
+model = gemma3:4b
+system_prompt = "You are a helpful assistant."
+
 [lemmy]
 enabled = true
 community_name = unixporn
