--- a/.github/workflows/labels.yaml
+++ b/.github/workflows/labels.yaml
@@ -10,6 +10,7 @@ jobs:
     name: Labeler
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - name: Labeler
         uses: actions/labeler@8558fd74291d67161a8a78ce36a881fa63b766a9 # v5.0.0
         with:
