--- a/config.ini
+++ b/config.ini
@@ -8,10 +8,12 @@ port = 6379
 
 [ollama]
 enabled = true
+delay = 300
 ; Ollama server host
 host = http://localhost:11434
 model = gemma3:4b
 system_prompt = "You are a helpful assistant."
+user_prompt = "Hello help me"
 
 [lemmy]
 enabled = true
