--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -1,5 +1,18 @@
 github-actions:
-  - ".github/**/*"
+  - changed-files:
+    - any-glob-to-any-file: 
+      - ".github/**/*"
 docker:
-  - "Dockerfile"
-  - "docker-compose.yaml"
+  - changed-files:
+    - any-glob-to-any-file: 
+      - "Dockerfile"
+      - "docker-compose.yaml"
+app:
+  - all:
+    - changed-files:
+      - any-glob-to-any-file: 
+        - 'common/**'
+        - 'internal/**'
+        - 'config.ini'
+        - 'requirements.txt'
+        - 'main.py'
