feat: able to tweet simple text daily

--- a/config.ini
+++ b/config.ini
@@ -11,7 +11,7 @@ enabled = true
 delay = 300
 ; Ollama server host
 host = http://localhost:11434
-model = gemma3:4b
+model = mistral:7b
 system_prompt = "You are a helpful assistant."
 user_prompt = "Hello help me"
 
@@ -33,6 +33,12 @@ client_secret = client_secret
 ; Reddit subreddit and flairs
 subreddit_list = unixporn
 flair_list = screenshot, material
+
+[text]
+enabled = true
+; delay between checks in seconds
+delay = 10
+message = Hello from bot!
 
 [twitter]
 username = username
