--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,15 @@ http_port = 8000
 host = localhost
 port = 6379
 
+[ollama]
+enabled = true
+delay = 300
+; Ollama server host
+host = http://localhost:11434
+model = mistral:7b
+system_prompt = "You are a helpful assistant."
+user_prompt = "Hello help me"
+
 [lemmy]
 enabled = true
 community_name = unixporn
@@ -24,6 +33,12 @@ client_secret = client_secret
 ; Reddit subreddit and flairs
 subreddit_list = unixporn
 flair_list = screenshot, material
+
+[text]
+enabled = true
+; delay between checks in seconds
+delay = 10
+message = Hello from bot!
 
 [twitter]
 username = username
