feat: blacklist reddit user

--- a/config.ini
+++ b/config.ini
@@ -33,6 +33,8 @@ client_secret = client_secret
 ; Reddit subreddit and flairs
 subreddit_list = unixporn
 flair_list = screenshot, material
+; users blacklist separated by comma
+users_blacklist = bot_account
 
 [text]
 enabled = true
