fix: reorg folder

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -4,5 +4,8 @@
   "commit-search-depth": 50,
   "release-type": "simple",
   "packages": {
+    "containers/xbot/": {
+      "component": "xbot"
+    }
   }
 }
