--- a/.github/workflows/release-containers.yaml
+++ b/.github/workflows/release-containers.yaml
@@ -83,4 +83,4 @@ jobs:
           app_version=$(cat .github/.release-please-manifest.json | jq -r --arg key "$container" '.[$key]')
           platform=$(cat ./${{ matrix.containers }}/PLATFORM)
           container_name=$(echo $container | awk -F'/' '{print $2}')
-          docker buildx build --push --platform $platform -t ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_REGISTRY_REPO }}/$container_name:$app_version ./containers/$container_name
+          docker buildx build --push --platform $platform -t ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_REGISTRY_REPO }}/$container_name:$app_version -f ./containers/$container_name/Dockerfile .
