--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -4,8 +4,9 @@
   "commit-search-depth": 50,
   "release-type": "simple",
   "packages": {
-    "containers/xbot/": {
-      "component": "xbot"
+    "src": {
+      "package-name": "xbot",
+      "extra-files": ["containers/xbot/Dockerfile"]
     }
   }
 }
