--- a/.github/workflows/release-containers.yaml
+++ b/.github/workflows/release-containers.yaml
@@ -2,8 +2,8 @@ name: "Release docker image"
 
 on:
   push:
-    branches:
-      - "main"
+    # branches:
+    #   - "main"
     paths:
       - "src/**"
       - "Dockerfile"
@@ -45,6 +45,7 @@ jobs:
           # Advanced configuration: https://github.com/googleapis/release-please/blob/main/docs/manifest-releaser.md
           config-file: .github/release-please-config.json
           manifest-file: .github/.release-please-manifest.json
+          target-branch: chore/reorg-folder
       
 
   # Run the following section to push docker image if a release is created
