fix: reorg folder and add auto release (#127)
* chore: reorg folder

* fix: reorg folder

* fix: wip

--- a/containers/xbot/Dockerfile
+++ b/containers/xbot/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.12-alpine3.17@sha256:fc34b07ec97a4f288bc17083d288374a803dd59800399
 ENV USER=user
 
 WORKDIR /app
-COPY . /app
+COPY src/ /app
 
 # Install chromium
 RUN apk update && apk add --no-cache tini chromium=112.0.5615.165-r0 chromium-chromedriver=112.0.5615.165-r0
