Refactor renovate.json5 for consistency
Updated the format of the renovate.json5 file to use consistent syntax.

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -2,12 +2,13 @@
   extends: ['config:recommended','docker:pinDigests','helpers:pinGitHubActionDigests',':pinDevDependencies'],
   automergeType: 'branch',
   labels: ['renovate'],
+  "automergeType": "branch",
   packageRules: [
     {
-      description: 'Auto merge GitHub Actions',
-      matchDatasources: ['github-tags'],
-      groupName: "github-action",
-      automerge: true
+      'description': 'Auto merge GitHub Actions',
+      'matchDatasources': ['github-tags'],
+      'groupName': "github-action",
+      'automerge': 'true'
     },
     // Group digest update
     {
